cambios en el mapeo de los followerDto